--- a/articles/azure-functions/durable/TOC.yml
+++ b/articles/azure-functions/durable/TOC.yml
@@ -1,4 +1,5 @@
 - name: Documentatie voor Durable Functions
+  href: durable-functions-overview.md
 - name: Overzicht
   items:
     - name: Over Azure Functions
@@ -7,6 +8,8 @@
       href: durable-functions-overview.md
     - name: Serverloze vergelijking
       href: ../functions-compare-logic-apps-ms-flow-webjobs.md?toc=%2fazure%2fazure-functions%2fdurable%2ftoc.json
+    - name: Preview-functies
+      href: durable-functions-preview.md
 - name: Snelstartgidsen
   expanded: true
   items:
