--- a/articles/cognitive-services/Anomaly-Detector/toc.yml
+++ b/articles/cognitive-services/Anomaly-Detector/toc.yml
@@ -16,6 +16,12 @@
           href: quickstarts/detect-data-anomalies-java.md
         - name: Python gebruiken
           href: quickstarts/detect-data-anomalies-python.md
+- name: Zelfstudies
+  items:
+    - name: Afwijkingen in batch visualiseren met behulp van Power BI
+      href: tutorials/batch-anomaly-detection-powerbi.md
+    - name: Detectie van afwijkingen in streaming-gegevens met behulp van Azure Databricks
+      href: tutorials/anomaly-detection-streaming-databricks.md
 - name: Handleidingen
   items:
     - name: Afwijkingen in uw gegevens identificeren
