--- a/articles/role-based-access-control/TOC.yml
+++ b/articles/role-based-access-control/TOC.yml
@@ -17,6 +17,9 @@
       href: quickstart-assign-role-user-portal.md
     - name: Een gebruiker toegang verlenen - PowerShell
       href: tutorial-role-assignments-user-powershell.md
+    - name: Een gebruiker toegang verlenen - Resource Manager-sjabloon
+      displayName: 'ARM, resource manager template'
+      href: tutorial-role-assignments-user-template.md
     - name: Een groep toegang verlenen - PowerShell
       href: tutorial-role-assignments-group-powershell.md
     - name: Een aangepaste rol maken - PowerShell
@@ -88,6 +91,7 @@
     - name: REST-API
       href: /rest/api/authorization/
     - name: Resource Manager-sjablonen
+      displayName: ARM
       items:
         - name: Roltoewijzingen
           href: /azure/templates/microsoft.authorization/roleassignments
