--- a/articles/active-directory/reports-monitoring/toc.yml
+++ b/articles/active-directory/reports-monitoring/toc.yml
@@ -31,6 +31,8 @@
       href: concept-audit-logs.md
     - name: Aanmeldingslogboeken
       href: concept-sign-ins.md
+    - name: Rapport over gebruik en inzichten weergeven
+      href: concept-usage-insights-report.md
     - name: Riskante aanmeldingen
       href: concept-risky-sign-ins.md
     - name: Risicogebeurtenissen
