--- a/articles/aks/TOC.yml
+++ b/articles/aks/TOC.yml
@@ -187,7 +187,7 @@
           href: api-server-authorized-ip-ranges.md
         - name: Principalreferenties voor clusterservice bijwerken
           href: update-credentials.md
-        - name: Uitgaand clusterverkeer beheren en beperken
+        - name: Uitgaand clusterverkeer beheren en beperken (preview)
           href: limit-egress-traffic.md
         - name: Integratie van Azure Active Directory inschakelen
           items:
