--- a/articles/hdinsight/domain-joined/TOC.yml
+++ b/articles/hdinsight/domain-joined/TOC.yml
@@ -1,62 +1,51 @@
 - name: Documentatie voor Azure HDInsight
   href: /azure/hdinsight
-- name: Beveiliging voor bedrijven
+- name: Overzicht
   items:
-    - name: Overzicht
+    - name: Wat is Enterprise Security Package in HDInsight?
       href: apache-domain-joined-introduction.md
+- name: Concepten
+  items:
     - name: Plan voor ESP-clusters
       href: apache-domain-joined-architecture.md
     - name: ESP-clusters configureren met Azure AD DS
       href: apache-domain-joined-configure-using-azure-adds.md
     - name: Azure AD-gebruikers synchroniseren met een HDInsight-cluster
       href: ../hdinsight-sync-aad-users-to-cluster.md
-      maintainContext: true
     - name: Apache Hive-beleid configureren
       href: apache-domain-joined-run-hive.md
     - name: RBAC voor Apache HBase met Apache Ranger
       href: apache-domain-joined-run-hbase.md
     - name: RBAC voor Apache Kafka met Apache Ranger
       href: apache-domain-joined-run-kafka.md
-      maintainContext: true
     - name: VSCode gebruiken om een koppeling te maken met een ESP-cluster
       href: ../hdinsight-for-vscode.md
-      maintainContext: true
     - name: IntelliJ gebruiken om een koppeling te maken met een ESP-cluster
       href: ../spark/apache-spark-intellij-tool-plugin.md
-      maintainContext: true
     - name: Eclipse gebruiken om een koppeling te maken met een ESP-cluster
       href: ../spark/apache-spark-eclipse-tool-plugin.md
-      maintainContext: true
     - name: Apache Oozie gebruiken in ESP-clusters
       href: hdinsight-use-oozie-domain-joined-clusters.md
 - name: Gegevens beveiligen
   href: ../hdinsight-hadoop-create-linux-clusters-with-secure-transfer-storage.md
-  maintainContext: true
 - name: Netwerktoegang
   items:
     - name: HDInsight in Azure VNet
       href: ../hdinsight-extend-hadoop-virtual-network.md
-      maintainContext: true
     - name: HDInsight verbinden met een on-premises netwerk
       href: ../connect-on-premises-network.md
-      maintainContext: true
     - name: Een Apache HBase-cluster maken in Azure VNet
       href: ../hbase/apache-hbase-provision-vnet.md
-      maintainContext: true
     - name: Replicatie van een Apache HBase-cluster in Azure VNet
       href: ../hbase/apache-hbase-replication.md
-      maintainContext: true
 - name: Bewaken met behulp van Azure Monitor-logboeken
   items:
     - name: Azure Monitor-logboeken gebruiken
       href: ../hdinsight-hadoop-oms-log-analytics-tutorial.md
-      maintainContext: true
     - name: Query's gebruiken met Azure Monitor-logboeken
       href: ../hdinsight-hadoop-oms-log-analytics-use-queries.md
-      maintainContext: true
     - name: Cluster-prestaties bewaken
       href: ../hdinsight-key-scenarios-to-monitor.md
-      maintainContext: true
 - name: Naslaginformatie
   items:
     - name: Codevoorbeelden
@@ -86,10 +75,8 @@
       items:
         - name: Opmerkingen bij de huidige release
           href: ../hdinsight-release-notes.md
-          maintainContext: true
         - name: Gearchiveerde releaseopmerkingen
           href: ../hdinsight-release-notes-archive.md
-          maintainContext: true
     - name: Azure-roadmap
       href: 'https://azure.microsoft.com/roadmap/?category=intelligence-analytics'
     - name: Hulp op het forum
@@ -102,4 +89,3 @@
       href: 'https://azure.microsoft.com/pricing/calculator/'
     - name: Windows-hulpprogramma's voor HDInsight
       href: ../hdinsight-hadoop-windows-tools.md
-      maintainContext: true
