--- a/articles/hdinsight/kafka/TOC.yml
+++ b/articles/hdinsight/kafka/TOC.yml
@@ -2,15 +2,10 @@
   href: /azure/hdinsight
 - name: Overzicht
   items:
-    - name: Over Apache Kafka in HDInsight
+    - name: Wat is Apache Kafka in HDInsight?
       href: apache-kafka-introduction.md
-    - name: Apache Hadoop-onderdelen in HDInsight
-      href: ../hdinsight-component-versioning.md
-      maintainContext: true
-    - name: HDInsight 4.0
-      href: ../hdinsight-version-release.md
-      maintainContext: true
 - name: Snelstartgidsen
+  expanded: true
   items:
     - name: Een Apache Kafka-cluster maken - Portal
       href: apache-kafka-get-started.md
@@ -23,10 +18,8 @@
   items:
     - name: Gestructureerd streamen van Apache Spark gebruiken
       href: ../hdinsight-apache-kafka-spark-structured-streaming.md
-      maintainContext: true
     - name: Schrijven naar/lezen uit Apache Kafka met Apache Storm
       href: ../hdinsight-apache-storm-with-kafka.md
-      maintainContext: true
     - name: Apache Kafka Producer- en Consumer-API gebruiken
       href: apache-kafka-producer-consumer-api.md
     - name: Apps ontwikkelen met de Apache Kafka Streams-API
@@ -35,13 +28,16 @@
   items:
     - name: Capaciteitsplanning
       href: ../hdinsight-capacity-planning.md
-      maintainContext: true
     - name: Opslag en schaalbaarheid
       href: apache-kafka-scalability.md
     - name: Hoge beschikbaarheid van gegevens
       href: apache-kafka-high-availability.md
     - name: Prestaties afstemmen
       href: apache-kafka-performance-tuning.md
+    - name: Apache Hadoop-onderdelen in HDInsight
+      href: ../hdinsight-component-versioning.md
+    - name: HDInsight 4.0
+      href: ../hdinsight-version-release.md
 - name: Procedures
   items:
     - name: Automatisch onderwerp maken inschakelen
@@ -50,7 +46,6 @@
       href: apache-kafka-connector-iot-hub.md
     - name: HDInsight-apps installeren
       href: ../hdinsight-apps-install-applications.md
-      maintainContext: true
     - name: Apache Kafka gebruiken in een virtueel netwerk
       href: apache-kafka-connect-vpn-gateway.md
     - name: Apache Kafka-gegevens repliceren
@@ -61,66 +56,52 @@
       items:
         - name: 'Apache Spark, Apache Kafka en Azure Cosmos DB'
           href: ../apache-kafka-spark-structured-streaming-cosmosdb.md
-          maintainContext: true
         - name: Apache Kafka en Apache Spark (DStream)
           href: ../hdinsight-apache-spark-with-kafka.md
-          maintainContext: true
         - name: Apache Kafka gebruiken met Azure Container Service
           href: apache-kafka-azure-container-services.md
     - name: Ontwikkelen
       items:
         - name: Lege edge-knooppunten gebruiken
           href: ../hdinsight-apps-use-edge-node.md
-          maintainContext: true
     - name: Clusters uitbreiden
       items:
         - name: Clusters aanpassen met Bootstrap
           href: ../hdinsight-hadoop-customize-cluster-bootstrap.md
-          maintainContext: true
         - name: Clusters aanpassen met Script Action
           href: ../hdinsight-hadoop-customize-cluster-linux.md
-          maintainContext: true
         - name: Scriptacties ontwikkelen
           href: ../hdinsight-hadoop-script-actions-linux.md
-          maintainContext: true
         - name: HDInsight-toepassingen bouwen
           items:
             - name: Aangepaste apps installeren
               href: ../hdinsight-apps-install-custom-applications.md
-              maintainContext: true
             - name: Apps installeren met REST
               href: 'https://msdn.microsoft.com/library/mt706515.aspx'
             - name: HDInsight-apps publiceren in Azure Marketplace
               href: ../hdinsight-apps-publish-applications.md
-              maintainContext: true
     - name: Beveiligen
       items:
         - name: SSH gebruiken met HDInsight
           href: ../hdinsight-hadoop-linux-use-ssh-unix.md
-          maintainContext: true
         - name: SSH-tunneling gebruiken
           href: ../hdinsight-linux-ambari-ssh-tunnel.md
-          maintainContext: true
         - name: BYOK (Bring Your Own Key)
           href: apache-kafka-byok.md
         - name: SSL-versleuteling en -verificatie
           href: apache-kafka-ssl-encryption-authentication.md
         - name: RBAC voor Apache Kafka met Apache Ranger
           href: ../domain-joined/apache-domain-joined-run-kafka.md
-          maintainContext: true
     - name: Beheren
       items:
         - name: HDInsight-clusters maken
           href: ../hdinsight-hadoop-provision-linux-clusters.md
-          maintainContext: true
           items:
             - name: Azure Portal gebruiken
               href: ../hdinsight-hadoop-create-linux-clusters-portal.md
-              maintainContext: true
             - name: Azure Resource Manager-sjablonen gebruiken
               displayName: 'resource manager template, arm template, resource manager group'
               href: ../hdinsight-hadoop-create-linux-clusters-arm-templates.md
-              maintainContext: true
             - name: SDK voor .NET gebruiken
               href: 'https://docs.microsoft.com/dotnet/api/overview/azure/hdinsight?view=azure-dotnet#create-a-cluster'
             - name: SDK voor Python gebruiken
@@ -129,19 +110,14 @@
               href: 'https://docs.microsoft.com/java/api/overview/azure/hdinsight?view=azure-java-stable#create-a-cluster'
             - name: Azure PowerShell gebruiken
               href: ../hdinsight-hadoop-create-linux-clusters-azure-powershell.md
-              maintainContext: true
             - name: cURL en de Azure REST API gebruiken
               href: ../hdinsight-hadoop-create-linux-clusters-curl-rest.md
-              maintainContext: true
             - name: Azure CLI gebruiken
               href: ../hdinsight-hadoop-create-linux-clusters-azure-cli.md
-              maintainContext: true
             - name: On-demand clusters maken
               href: ../hdinsight-hadoop-create-linux-clusters-adf.md
-              maintainContext: true
     - name: HDInsight-clusters beheren
       href: ../hdinsight-administer-use-portal-linux.md
-      maintainContext: true
       items:
         - name: SDK voor .NET gebruiken
           href: 'https://docs.microsoft.com/dotnet/api/overview/azure/hdinsight?view=azure-dotnet#management'
@@ -153,98 +129,52 @@
           href: 'https://docs.microsoft.com/azure/hdinsight/hdinsight-go-sdk-overview'
         - name: Azure PowerShell gebruiken
           href: ../hdinsight-administer-use-powershell.md
-          maintainContext: true
         - name: De klassieke versie van Azure CLI gebruiken
           href: ../hdinsight-administer-use-command-line.md
-          maintainContext: true
         - name: Clusters beheren met de Apache Ambari-webinterface
           href: ../hdinsight-hadoop-manage-ambari.md
-          maintainContext: true
           items:
             - name: Clusters optimaliseren met de Apache Ambari-webinterface
               href: ../hdinsight-changing-configs-via-ambari.md
-              maintainContext: true
             - name: Apache Ambari REST API gebruiken
               href: ../hdinsight-hadoop-manage-ambari-rest-api.md
-              maintainContext: true
             - name: Beschikbaarheid van een cluster bewaken met Azure Monitor-logboeken
               href: ../hdinsight-cluster-availability.md
-              maintainContext: true
         - name: Logboeken beheren voor een HDInsight-cluster
           href: ../hdinsight-log-management.md
-          maintainContext: true
         - name: Opslagaccounts toevoegen
           href: ../hdinsight-hadoop-add-storage.md
-          maintainContext: true
         - name: Gegevens uploaden voor Apache Hadoop-taken
           href: ../hdinsight-upload-data.md
-          maintainContext: true
         - name: Meerdere HDInsight-clusters met Data Lake Store
           href: ../hdinsight-multiple-clusters-data-lake-store.md
-          maintainContext: true
         - name: Cluster en servicepoorten en URI's
           href: ../hdinsight-hadoop-port-settings-for-services.md
-          maintainContext: true
         - name: 'Beschikbaarheid en betrouwbaarheid '
           href: ../hdinsight-high-availability-linux.md
-          maintainContext: true
         - name: HDInsight-cluster upgraden naar nieuwere versie
           href: ../hdinsight-upgrade-cluster.md
-          maintainContext: true
         - name: OS-patches voor HDInsight-cluster
           href: ../hdinsight-os-patching.md
-          maintainContext: true
     - name: Problemen oplossen
       href: ../hdinsight-troubleshoot-guide.md
-      maintainContext: true
       items:
         - name: Problemen met een traag of niet werkend HDInsight-cluster oplossen
           href: ../hdinsight-troubleshoot-failed-cluster.md
-          maintainContext: true
         - name: Problemen met Apache Hadoop HDFS oplossen
           href: ../hdinsight-troubleshoot-hdfs.md
-          maintainContext: true
         - name: Problemen met Apache Hadoop YARN oplossen
           href: ../hdinsight-troubleshoot-yarn.md
-          maintainContext: true
         - name: Resources
           items:
             - name: Informatie over het gebruik van HDInsight in Linux
               href: ../hdinsight-hadoop-linux-information.md
-              maintainContext: true
             - name: Apache Hadoop-geheugen en -prestaties
               href: ../hdinsight-hadoop-stack-trace-error-messages.md
-              maintainContext: true
             - name: Toegang tot Apache Hadoop YARN-toepassingslogboeken in Linux
               href: ../hdinsight-hadoop-access-yarn-app-logs-linux.md
-              maintainContext: true
             - name: Heapdumps voor Apache Hadoop-services inschakelen
               href: ../hdinsight-hadoop-collect-debug-heap-dump-linux.md
-              maintainContext: true
-- name: Gereedheid voor bedrijven
-  items:
-    - name: Gegevens beveiligen
-      href: ../hdinsight-hadoop-create-linux-clusters-with-secure-transfer-storage.md
-      maintainContext: true
-    - name: Netwerktoegang
-      items:
-        - name: HDInsight in Azure VNet
-          href: ../hdinsight-extend-hadoop-virtual-network.md
-          maintainContext: true
-        - name: HDInsight verbinden met een on-premises netwerk
-          href: ../connect-on-premises-network.md
-          maintainContext: true
-    - name: Bewaken met behulp van Azure Monitor-logboeken
-      items:
-        - name: Azure Monitor-logboeken gebruiken
-          href: ../hdinsight-hadoop-oms-log-analytics-tutorial.md
-          maintainContext: true
-        - name: Query's gebruiken met Azure Monitor-logboeken
-          href: ../hdinsight-hadoop-oms-log-analytics-use-queries.md
-          maintainContext: true
-        - name: Cluster-prestaties bewaken
-          href: ../hdinsight-key-scenarios-to-monitor.md
-          maintainContext: true
 - name: Naslaginformatie
   items:
     - name: Codevoorbeelden
@@ -280,4 +210,21 @@
       href: 'https://azure.microsoft.com/pricing/calculator/'
     - name: Windows-hulpprogramma's voor HDInsight
       href: ../hdinsight-hadoop-windows-tools.md
-      maintainContext: true
+- name: Gereedheid voor bedrijven
+  items:
+    - name: Gegevens beveiligen
+      href: ../hdinsight-hadoop-create-linux-clusters-with-secure-transfer-storage.md
+    - name: Netwerktoegang
+      items:
+        - name: HDInsight in Azure VNet
+          href: ../hdinsight-extend-hadoop-virtual-network.md
+        - name: HDInsight verbinden met een on-premises netwerk
+          href: ../connect-on-premises-network.md
+    - name: Bewaken met behulp van Azure Monitor-logboeken
+      items:
+        - name: Azure Monitor-logboeken gebruiken
+          href: ../hdinsight-hadoop-oms-log-analytics-tutorial.md
+        - name: Query's gebruiken met Azure Monitor-logboeken
+          href: ../hdinsight-hadoop-oms-log-analytics-use-queries.md
+        - name: Cluster-prestaties bewaken
+          href: ../hdinsight-key-scenarios-to-monitor.md
