--- a/articles/hdinsight/r-server/TOC.yml
+++ b/articles/hdinsight/r-server/TOC.yml
@@ -1,25 +1,23 @@
 - name: Documentatie voor Azure HDInsight
   href: /azure/hdinsight
-- name: ML Services in HDInsight
+- name: Overzicht
   items:
-    - name: Overzicht
+    - name: Wat is ML Services in HDInsight?
       href: r-server-overview.md
-    - name: Apache Hadoop-onderdelen in HDInsight
-      href: ../hdinsight-component-versioning.md
-      maintainContext: true
-    - name: HDInsight 4.0
-      href: ../hdinsight-version-release.md
-      maintainContext: true
 - name: Aan de slag
   items:
     - name: Aan de slag met ML Services
       href: r-server-get-started.md
     - name: HDInsight-apps installeren
       href: ../hdinsight-apps-install-applications.md
-      maintainContext: true
     - name: Planning clustercapaciteit
       href: ../hdinsight-capacity-planning.md
-      maintainContext: true
+- name: Concepten
+  items:
+    - name: Apache Hadoop-onderdelen in HDInsight
+      href: ../hdinsight-component-versioning.md
+    - name: HDInsight 4.0
+      href: ../hdinsight-version-release.md
 - name: Procedures
   items:
     - name: ML Services gebruiken
@@ -34,97 +32,72 @@
           href: r-server-compute-contexts.md
         - name: ScaleR en SparkR
           href: ../hdinsight-hadoop-r-scaler-sparkr.md
-          maintainContext: true
     - name: Clusteropslag gebruiken
       items:
         - name: Met behulp van Azure Storage
           href: ../hdinsight-hadoop-use-blob-storage.md
-          maintainContext: true
         - name: Azure Data Lake Storage Gen2 gebruiken
           href: ../hdinsight-hadoop-use-data-lake-storage-gen2.md
-          maintainContext: true
         - name: Azure Data Lake Storage Gen1 gebruiken
           href: ../hdinsight-hadoop-use-data-lake-store.md
-          maintainContext: true
     - name: HDInsight-hulpprogramma's gebruiken
       items:
         - name: Hulpprogramma's voor Visual Studio
           href: ../hadoop/apache-hadoop-visual-studio-tools-get-started.md
-          maintainContext: true
         - name: Hulpprogramma's voor VSCode
           href: ../hdinsight-for-vscode.md
-          maintainContext: true
         - name: Taken verzenden vanuit R-hulpprogramma's voor Visual Studio
           href: r-server-submit-jobs-r-tools-vs.md
     - name: Clusters uitbreiden
       items:
         - name: Clusters aanpassen met Bootstrap
           href: ../hdinsight-hadoop-customize-cluster-bootstrap.md
-          maintainContext: true
         - name: Clusters aanpassen met Script Action
           href: ../hdinsight-hadoop-customize-cluster-linux.md
-          maintainContext: true
         - name: Scriptacties ontwikkelen
           href: ../hdinsight-hadoop-script-actions-linux.md
-          maintainContext: true
         - name: Presto installeren en gebruiken
           href: ../hdinsight-hadoop-install-presto.md
-          maintainContext: true
         - name: Apache Hive-bibliotheken toevoegen
           href: ../hdinsight-hadoop-add-hive-libraries.md
-          maintainContext: true
         - name: Apache Giraph gebruiken
           href: ../hdinsight-hadoop-giraph-install-linux.md
-          maintainContext: true
         - name: Hue gebruiken
           href: ../hdinsight-hadoop-hue-linux.md
-          maintainContext: true
         - name: R gebruiken
           href: ../hdinsight-hadoop-r-scripts-linux.md
-          maintainContext: true
         - name: Apache Zeppelin gebruiken
           href: ../hdinsight-apache-spark-zeppelin-notebook.md
-          maintainContext: true
         - name: Lege edge-knooppunten gebruiken
           href: ../hdinsight-apps-use-edge-node.md
-          maintainContext: true
         - name: HDInsight-toepassingen bouwen
           items:
             - name: Aangepaste apps installeren
               href: ../hdinsight-apps-install-custom-applications.md
-              maintainContext: true
             - name: Apps installeren met REST
               href: 'https://msdn.microsoft.com/library/mt706515.aspx'
             - name: HDInsight-apps publiceren in Azure Marketplace
               href: ../hdinsight-apps-publish-applications.md
-              maintainContext: true
     - name: Beveiligen
       items:
         - name: SSH gebruiken met HDInsight
           href: ../hdinsight-hadoop-linux-use-ssh-unix.md
-          maintainContext: true
         - name: SSH-tunneling gebruiken
           href: ../hdinsight-linux-ambari-ssh-tunnel.md
-          maintainContext: true
         - name: Toegang tot gegevens beperken
           href: ../hdinsight-storage-sharedaccesssignature-permissions.md
-          maintainContext: true
         - name: Gebruikers machtigen voor Apache Ambari-weergaven
           href: ../hdinsight-authorize-users-to-ambari.md
-          maintainContext: true
     - name: Beheren
       items:
         - name: HDInsight-clusters maken
           href: ../hdinsight-hadoop-provision-linux-clusters.md
-          maintainContext: true
           items:
             - name: Azure Portal gebruiken
               href: ../hdinsight-hadoop-create-linux-clusters-portal.md
-              maintainContext: true
             - name: Azure Resource Manager-sjablonen gebruiken
               displayName: 'resource manager template, arm template, resource manager group'
               href: ../hdinsight-hadoop-create-linux-clusters-arm-templates.md
-              maintainContext: true
             - name: SDK voor .NET gebruiken
               href: 'https://docs.microsoft.com/dotnet/api/overview/azure/hdinsight?view=azure-dotnet#create-a-cluster'
             - name: SDK voor Python gebruiken
@@ -133,22 +106,16 @@
               href: 'https://docs.microsoft.com/java/api/overview/azure/hdinsight?view=azure-java-stable#create-a-cluster'
             - name: Azure PowerShell gebruiken
               href: ../hdinsight-hadoop-create-linux-clusters-azure-powershell.md
-              maintainContext: true
             - name: cURL en de Azure REST API gebruiken
               href: ../hdinsight-hadoop-create-linux-clusters-curl-rest.md
-              maintainContext: true
             - name: Azure CLI gebruiken
               href: ../hdinsight-hadoop-create-linux-clusters-azure-cli.md
-              maintainContext: true
             - name: On-demand clusters maken
               href: ../hdinsight-hadoop-create-linux-clusters-adf.md
-              maintainContext: true
         - name: On-demand clusters maken
           href: ../hdinsight-hadoop-create-linux-clusters-adf.md
-          maintainContext: true
         - name: HDInsight-clusters beheren
           href: ../hdinsight-administer-use-portal-linux.md
-          maintainContext: true
           items:
             - name: SDK voor .NET gebruiken
               href: 'https://docs.microsoft.com/dotnet/api/overview/azure/hdinsight?view=azure-dotnet#management'
@@ -160,32 +127,23 @@
               href: 'https://docs.microsoft.com/azure/hdinsight/hdinsight-go-sdk-overview'
             - name: Azure PowerShell gebruiken
               href: ../hdinsight-administer-use-powershell.md
-              maintainContext: true
             - name: De klassieke versie van Azure CLI gebruiken
               href: ../hdinsight-administer-use-command-line.md
-              maintainContext: true
         - name: Clusters beheren met de Apache Ambari-webinterface
           href: ../hdinsight-hadoop-manage-ambari.md
-          maintainContext: true
           items:
             - name: Clusters optimaliseren met de Apache Ambari-webinterface
               href: ../hdinsight-changing-configs-via-ambari.md
-              maintainContext: true
             - name: Apache Ambari REST API gebruiken
               href: ../hdinsight-hadoop-manage-ambari-rest-api.md
-              maintainContext: true
         - name: Logboeken beheren voor een HDInsight-cluster
           href: ../hdinsight-log-management.md
-          maintainContext: true
         - name: Opslagaccounts toevoegen
           href: ../hdinsight-hadoop-add-storage.md
-          maintainContext: true
         - name: Gegevens uploaden voor Apache Hadoop-taken
           href: ../hdinsight-upload-data.md
-          maintainContext: true
         - name: Meerdere HDInsight-clusters met Data Lake Storage
           href: ../hdinsight-multiple-clusters-data-lake-store.md
-          maintainContext: true
         - name: Gegevens importeren en exporteren met Apache Sqoop
           href: ../hadoop/hdinsight-use-sqoop.md
           items:
@@ -199,87 +157,45 @@
               href: ../hadoop/apache-hadoop-use-sqoop-powershell.md
         - name: Apache Oozie gebruiken voor werkstromen
           href: ../hdinsight-use-oozie-linux-mac.md
-          maintainContext: true
         - name: Cluster en servicepoorten en URI's
           href: ../hdinsight-hadoop-port-settings-for-services.md
-          maintainContext: true
         - name: Migreren naar ontwikkelingsprogramma's van Resource Manager
           href: ../hdinsight-hadoop-development-using-azure-resource-manager.md
-          maintainContext: true
         - name: Beschikbaarheid en betrouwbaarheid
           href: ../hdinsight-high-availability-linux.md
-          maintainContext: true
         - name: HDInsight-cluster upgraden naar nieuwere versie
           href: ../hdinsight-upgrade-cluster.md
-          maintainContext: true
         - name: OS-patches voor HDInsight-cluster
           href: ../hdinsight-os-patching.md
-          maintainContext: true
     - name: Problemen oplossen
       href: ../hdinsight-troubleshoot-guide.md
-      maintainContext: true
       items:
         - name: Problemen met een traag of niet werkend HDInsight-cluster oplossen
           href: ../hdinsight-troubleshoot-failed-cluster.md
-          maintainContext: true
         - name: Problemen met Apache Hadoop HDFS oplossen
           href: ../hdinsight-troubleshoot-hdfs.md
-          maintainContext: true
         - name: Problemen met Apache HIVE oplossen
           href: ../hdinsight-troubleshoot-hive.md
-          maintainContext: true
         - name: Problemen met Apache Hadoop YARN oplossen
           href: ../hdinsight-troubleshoot-yarn.md
-          maintainContext: true
         - name: Resources
           items:
             - name: Informatie over het gebruik van HDInsight in Linux
               href: ../hdinsight-hadoop-linux-information.md
-              maintainContext: true
             - name: Apache Hadoop-geheugen en -prestaties
               href: ../hdinsight-hadoop-stack-trace-error-messages.md
-              maintainContext: true
             - name: Toegang tot Apache Hadoop YARN-toepassingslogboeken in Linux
               href: ../hdinsight-hadoop-access-yarn-app-logs-linux.md
-              maintainContext: true
             - name: Heapdumps voor Apache Hadoop-services inschakelen
               href: ../hdinsight-hadoop-collect-debug-heap-dump-linux.md
-              maintainContext: true
             - name: Inzicht in problemen met WebHCat en deze oplossen
               href: ../hdinsight-hadoop-templeton-webhcat-debug-errors.md
-              maintainContext: true
             - name: Apache Hive-instellingen om fouten van het type 'onvoldoende geheugen' op te lossen
               href: ../hdinsight-hadoop-hive-out-of-memory-error-oom.md
-              maintainContext: true
             - name: Apache Hive-query's optimaliseren
               href: ../hdinsight-hadoop-optimize-hive-query.md
-              maintainContext: true
             - name: 'Migreren naar gedetailleerde, op rollen gebaseerde toegang voor clusterconfiguraties'
               href: ../hdinsight-migrate-granular-access-cluster-configurations.md
-- name: Gereedheid voor bedrijven
-  items:
-    - name: Gegevens beveiligen
-      href: ../hdinsight-hadoop-create-linux-clusters-with-secure-transfer-storage.md
-      maintainContext: true
-    - name: Netwerktoegang
-      items:
-        - name: HDInsight in Azure VNet
-          href: ../hdinsight-extend-hadoop-virtual-network.md
-          maintainContext: true
-        - name: HDInsight verbinden met een on-premises netwerk
-          href: ../connect-on-premises-network.md
-          maintainContext: true
-    - name: Bewaken met behulp van Azure Monitor-logboeken
-      items:
-        - name: Azure Monitor-logboeken gebruiken
-          href: ../hdinsight-hadoop-oms-log-analytics-tutorial.md
-          maintainContext: true
-        - name: Query's gebruiken met Azure Monitor-logboeken
-          href: ../hdinsight-hadoop-oms-log-analytics-use-queries.md
-          maintainContext: true
-        - name: Cluster-prestaties bewaken
-          href: ../hdinsight-key-scenarios-to-monitor.md
-          maintainContext: true
 - name: Naslaginformatie
   items:
     - name: Codevoorbeelden
@@ -311,10 +227,8 @@
       items:
         - name: Opmerkingen bij de huidige release
           href: ../hdinsight-release-notes.md
-          maintainContext: true
         - name: Gearchiveerde releaseopmerkingen
           href: ../hdinsight-release-notes-archive.md
-          maintainContext: true
     - name: Azure-roadmap
       href: 'https://azure.microsoft.com/roadmap/?category=intelligence-analytics'
     - name: Hulp op het forum
@@ -327,4 +241,21 @@
       href: 'https://azure.microsoft.com/pricing/calculator/'
     - name: Windows-hulpprogramma's voor HDInsight
       href: ../hdinsight-hadoop-windows-tools.md
-      maintainContext: true
+- name: Gereedheid voor bedrijven
+  items:
+    - name: Gegevens beveiligen
+      href: ../hdinsight-hadoop-create-linux-clusters-with-secure-transfer-storage.md
+    - name: Netwerktoegang
+      items:
+        - name: HDInsight in Azure VNet
+          href: ../hdinsight-extend-hadoop-virtual-network.md
+        - name: HDInsight verbinden met een on-premises netwerk
+          href: ../connect-on-premises-network.md
+    - name: Bewaken met behulp van Azure Monitor-logboeken
+      items:
+        - name: Azure Monitor-logboeken gebruiken
+          href: ../hdinsight-hadoop-oms-log-analytics-tutorial.md
+        - name: Query's gebruiken met Azure Monitor-logboeken
+          href: ../hdinsight-hadoop-oms-log-analytics-use-queries.md
+        - name: Cluster-prestaties bewaken
+          href: ../hdinsight-key-scenarios-to-monitor.md
