--- a/articles/hdinsight/storm/TOC.yml
+++ b/articles/hdinsight/storm/TOC.yml
@@ -1,25 +1,23 @@
 - name: Documentatie voor Azure HDInsight
   href: /azure/hdinsight
-- name: Apache Storm in HDInsight
+- name: Overzicht
   items:
-    - name: Overzicht
+    - name: Wat is Apache Storm in HDInsight?
       href: apache-storm-overview.md
-    - name: Apache Hadoop-onderdelen in HDInsight
-      href: ../hdinsight-component-versioning.md
-      maintainContext: true
-    - name: HDInsight 4.0
-      href: ../hdinsight-version-release.md
-      maintainContext: true
 - name: Aan de slag
   items:
     - name: Een Apache Storm-cluster maken
       href: apache-storm-tutorial-get-started-linux.md
     - name: HDInsight-apps installeren
       href: ../hdinsight-apps-install-applications.md
-      maintainContext: true
     - name: Capaciteitsplanning
       href: ../hdinsight-capacity-planning.md
-      maintainContext: true
+- name: Concepten
+  items:
+    - name: Apache Hadoop-onderdelen in HDInsight
+      href: ../hdinsight-component-versioning.md
+    - name: HDInsight 4.0
+      href: ../hdinsight-version-release.md
 - name: Procedures
   items:
     - name: Apache Storm-topologieën ontwikkelen
@@ -40,7 +38,6 @@
       items:
         - name: Apache Kafka en Apache Storm (Java)
           href: ../hdinsight-apache-storm-with-kafka.md
-          maintainContext: true
         - name: 'Event Hub, Storage en Data Lake Storage (Java)'
           href: 'https://azure.microsoft.com/resources/samples/hdinsight-java-storm-eventhub/'
         - name: 'Event Hub en Apache Storm (C# en Java)'
@@ -53,47 +50,36 @@
       items:
         - name: Clusters aanpassen met Bootstrap
           href: ../hdinsight-hadoop-customize-cluster-bootstrap.md
-          maintainContext: true
         - name: Clusters aanpassen met Script Action
           href: ../hdinsight-hadoop-customize-cluster-linux.md
-          maintainContext: true
         - name: Scriptacties ontwikkelen
           href: ../hdinsight-hadoop-script-actions-linux.md
-          maintainContext: true
         - name: HDInsight-toepassingen bouwen
           items:
             - name: Aangepaste apps installeren
               href: ../hdinsight-apps-install-custom-applications.md
-              maintainContext: true
             - name: Apps installeren met REST
               href: 'https://msdn.microsoft.com/library/mt706515.aspx'
             - name: HDInsight-apps publiceren in Azure Marketplace
               href: ../hdinsight-apps-publish-applications.md
-              maintainContext: true
     - name: Beveiligen
       items:
         - name: SSH gebruiken met HDInsight
           href: ../hdinsight-hadoop-linux-use-ssh-unix.md
-          maintainContext: true
         - name: SSH-tunneling gebruiken
           href: ../hdinsight-linux-ambari-ssh-tunnel.md
-          maintainContext: true
         - name: Toegang tot gegevens beperken
           href: ../hdinsight-storage-sharedaccesssignature-permissions.md
-          maintainContext: true
     - name: Beheren
       items:
         - name: HDInsight-clusters maken
           href: ../hdinsight-hadoop-provision-linux-clusters.md
-          maintainContext: true
           items:
             - name: Azure Portal gebruiken
               href: ../hdinsight-hadoop-create-linux-clusters-portal.md
-              maintainContext: true
             - name: Azure Resource Manager-sjablonen gebruiken
               displayName: 'resource manager template, arm template, resource manager group'
               href: ../hdinsight-hadoop-create-linux-clusters-arm-templates.md
-              maintainContext: true
             - name: SDK voor .NET gebruiken
               href: 'https://docs.microsoft.com/dotnet/api/overview/azure/hdinsight?view=azure-dotnet#create-a-cluster'
             - name: SDK voor Python gebruiken
@@ -102,19 +88,14 @@
               href: 'https://docs.microsoft.com/java/api/overview/azure/hdinsight?view=azure-java-stable#create-a-cluster'
             - name: Azure PowerShell gebruiken
               href: ../hdinsight-hadoop-create-linux-clusters-azure-powershell.md
-              maintainContext: true
             - name: cURL en de Azure REST API gebruiken
               href: ../hdinsight-hadoop-create-linux-clusters-curl-rest.md
-              maintainContext: true
             - name: Azure CLI gebruiken
               href: ../hdinsight-hadoop-create-linux-clusters-azure-cli.md
-              maintainContext: true
             - name: On-demand clusters maken
               href: ../hdinsight-hadoop-create-linux-clusters-adf.md
-              maintainContext: true
         - name: HDInsight-clusters beheren
           href: ../hdinsight-administer-use-portal-linux.md
-          maintainContext: true
           items:
             - name: SDK voor .NET gebruiken
               href: 'https://docs.microsoft.com/dotnet/api/overview/azure/hdinsight?view=azure-dotnet#management'
@@ -126,119 +107,67 @@
               href: 'https://docs.microsoft.com/azure/hdinsight/hdinsight-go-sdk-overview'
             - name: Azure PowerShell gebruiken
               href: ../hdinsight-administer-use-powershell.md
-              maintainContext: true
             - name: De klassieke versie van Azure CLI gebruiken
               href: ../hdinsight-administer-use-command-line.md
-              maintainContext: true
         - name: Clusters beheren met de Apache Ambari-webinterface
           href: ../hdinsight-hadoop-manage-ambari.md
-          maintainContext: true
           items:
             - name: Clusters optimaliseren met de Apache Ambari-webinterface
               href: ../hdinsight-changing-configs-via-ambari.md
-              maintainContext: true
             - name: Apache Ambari REST API gebruiken
               href: ../hdinsight-hadoop-manage-ambari-rest-api.md
-              maintainContext: true
         - name: Logboeken beheren voor een HDInsight-cluster
           href: ../hdinsight-log-management.md
-          maintainContext: true
         - name: Opslagaccounts toevoegen
           href: ../hdinsight-hadoop-add-storage.md
-          maintainContext: true
         - name: Gegevens uploaden voor Apache Hadoop-taken
           href: ../hdinsight-upload-data.md
-          maintainContext: true
         - name: Meerdere HDInsight-clusters met Data Lake Storage
           href: ../hdinsight-multiple-clusters-data-lake-store.md
-          maintainContext: true
         - name: Gegevens importeren en exporteren met Apache Sqoop
           href: ../hdinsight-use-sqoop.md
-          maintainContext: true
           items:
             - name: Verbinding maken met SSH
               href: ../hdinsight-use-sqoop-mac-linux.md
-              maintainContext: true
             - name: Uitvoeren met cURL
               href: ../hdinsight-hadoop-use-sqoop-curl.md
-              maintainContext: true
             - name: Uitvoeren met de SDK voor .NET
               href: ../hdinsight-hadoop-use-sqoop-dotnet-sdk.md
-              maintainContext: true
             - name: Uitvoeren met Azure PowerShell
               href: ../hdinsight-hadoop-use-sqoop-powershell.md
-              maintainContext: true
         - name: Apache Oozie gebruiken voor werkstromen
           href: ../hdinsight-use-oozie-linux-mac.md
-          maintainContext: true
         - name: Cluster en servicepoorten en URI's
           href: ../hdinsight-hadoop-port-settings-for-services.md
-          maintainContext: true
         - name: Migreren naar ontwikkelingsprogramma's van Resource Manager
           href: ../hdinsight-hadoop-development-using-azure-resource-manager.md
-          maintainContext: true
         - name: Beschikbaarheid en betrouwbaarheid
           href: ../hdinsight-high-availability-linux.md
-          maintainContext: true
         - name: HDInsight-cluster upgraden naar nieuwere versie
           href: ../hdinsight-upgrade-cluster.md
-          maintainContext: true
         - name: OS-patches voor HDInsight-cluster
           href: ../hdinsight-os-patching.md
-          maintainContext: true
     - name: Problemen oplossen
       href: ../hdinsight-troubleshoot-guide.md
-      maintainContext: true
       items:
         - name: Problemen met een traag of niet werkend HDInsight-cluster oplossen
           href: ../hdinsight-troubleshoot-failed-cluster.md
-          maintainContext: true
         - name: Problemen met Apache Hadoop HDFS oplossen
           href: ../hdinsight-troubleshoot-hdfs.md
-          maintainContext: true
         - name: Problemen met Apache STORM oplossen
           href: apache-troubleshoot-storm.md
         - name: Problemen met Apache Hadoop YARN oplossen
           href: ../hdinsight-troubleshoot-yarn.md
-          maintainContext: true
         - name: Resources
           items:
             - name: Informatie over het gebruik van HDInsight in Linux
               href: ../hdinsight-hadoop-linux-information.md
-              maintainContext: true
             - name: Apache Hadoop-geheugen en -prestaties
               href: ../hdinsight-hadoop-stack-trace-error-messages.md
-              maintainContext: true
             - name: Toegang tot Hadoop YARN-toepassingslogboeken in Linux
               href: ../hdinsight-hadoop-access-yarn-app-logs-linux.md
-              maintainContext: true
             - name: Heapdumps voor Apache Hadoop-services inschakelen
               href: ../hdinsight-hadoop-collect-debug-heap-dump-linux.md
-              maintainContext: true
-- name: Gereedheid voor bedrijven
-  items:
-    - name: Gegevens beveiligen
-      href: ../hdinsight-hadoop-create-linux-clusters-with-secure-transfer-storage.md
-      maintainContext: true
-    - name: Netwerktoegang
-      items:
-        - name: HDInsight in Azure VNet
-          href: ../hdinsight-extend-hadoop-virtual-network.md
-          maintainContext: true
-        - name: HDInsight verbinden met een on-premises netwerk
-          href: ../connect-on-premises-network.md
-          maintainContext: true
-    - name: Bewaken met behulp van Azure Monitor-logboeken
-      items:
-        - name: Azure Monitor-logboeken gebruiken
-          href: ../hdinsight-hadoop-oms-log-analytics-tutorial.md
-          maintainContext: true
-        - name: Query's gebruiken met Azure Monitor-logboeken
-          href: ../hdinsight-hadoop-oms-log-analytics-use-queries.md
-          maintainContext: true
-        - name: Cluster-prestaties bewaken
-          href: ../hdinsight-key-scenarios-to-monitor.md
-          maintainContext: true
 - name: Naslaginformatie
   items:
     - name: Codevoorbeelden
@@ -262,16 +191,6 @@
     - name: Resource Manager-sjabloon
       displayName: 'resource manager template, arm template, resource manager group'
       href: /azure/templates/microsoft.hdinsight/allversions
-- name: Verwant
-  items:
-    - name: Windows-clusters
-      items:
-        - name: Windows-clusters migreren naar Linux-clusters
-          href: ../hdinsight-migrate-from-windows-to-linux.md
-          maintainContext: true
-        - name: .NET-oplossingen migreren naar Linux-clusters
-          href: ../hdinsight-hadoop-migrate-dotnet-to-linux.md
-          maintainContext: true
 - name: Resources
   items:
     - name: Azure-roadmap
@@ -286,6 +205,31 @@
       href: 'https://azure.microsoft.com/pricing/calculator/'
     - name: Windows-hulpprogramma's voor HDInsight
       href: ../hdinsight-hadoop-windows-tools.md
-      maintainContext: true
     - name: Toegang tot wijzigingen van de clusterconfiguratie
       href: ../hdinsight-migrate-granular-access-cluster-configurations.md
+- name: Gereedheid voor bedrijven
+  items:
+    - name: Gegevens beveiligen
+      href: ../hdinsight-hadoop-create-linux-clusters-with-secure-transfer-storage.md
+    - name: Netwerktoegang
+      items:
+        - name: HDInsight in Azure VNet
+          href: ../hdinsight-extend-hadoop-virtual-network.md
+        - name: HDInsight verbinden met een on-premises netwerk
+          href: ../connect-on-premises-network.md
+    - name: Bewaken met behulp van Azure Monitor-logboeken
+      items:
+        - name: Azure Monitor-logboeken gebruiken
+          href: ../hdinsight-hadoop-oms-log-analytics-tutorial.md
+        - name: Query's gebruiken met Azure Monitor-logboeken
+          href: ../hdinsight-hadoop-oms-log-analytics-use-queries.md
+        - name: Cluster-prestaties bewaken
+          href: ../hdinsight-key-scenarios-to-monitor.md
+- name: Verwant
+  items:
+    - name: Windows-clusters
+      items:
+        - name: Windows-clusters migreren naar Linux-clusters
+          href: ../hdinsight-migrate-from-windows-to-linux.md
+        - name: .NET-oplossingen migreren naar Linux-clusters
+          href: ../hdinsight-hadoop-migrate-dotnet-to-linux.md
