--- a/articles/iot-central/TOC.yml
+++ b/articles/iot-central/TOC.yml
@@ -89,6 +89,8 @@
               href: howto-export-data-event-hubs-service-bus.md
             - name: Exporteren naar Blob Storage
               href: howto-export-data-blob-storage.md
+        - name: Aangepaste regels maken
+          href: howto-create-custom-rules.md
         - name: Uw gegevens visualiseren in Power BI
           href: howto-connect-powerbi.md
         - name: Verbinding maken met andere IoT-clouds
